start removing hash from start_trottle arguments
