# emily/handler/src/api/models/throttle.rs
@@ -9,16 +9,28 @@ use utoipa::{ToResponse, ToSchema};
 pub struct ThrottleKey {
     /// The name of the key.
     pub name: String,
-    /// The hash of the secret associated with this key.
-    pub hash: String,
+    /// The secret of the secret associated with this key.
+    pub secret: String,
 }
 
 /// Represents the throttle reqwest
 #[derive(Clone, Default, Debug, Eq, PartialEq, Serialize, Deserialize, ToSchema, ToResponse)]
 #[serde(rename_all = "camelCase")]
 pub struct ThrottleRequest {
-    /// The hash of the key.
-    pub hash: String,
+    /// The name of the key.
+    pub name: String,
     /// The secret associated with this key.
     pub secret: String,
+}
+
+/// Response to get_throttle_key endpoint, with information about the key
+#[derive(Clone, Default, Debug, Eq, PartialEq, Serialize, Deserialize, ToSchema, ToResponse)]
+#[serde(rename_all = "camelCase")]
+pub struct GetThrottleKeyResponse {
+    /// The name of the key.
+    pub name: String,
+    /// The hash of the key.
+    pub hash: String,
+    /// If this key is eligible to start throttle mode.
+    pub is_active: bool,
 }
